--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 
 <!DOCTYPE html><html lang='en' class=''>
 <head>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react-dom.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react-dom.min.js'></script>
+  <script src='foo.js'></script>
 </head>
 <body>
   <div id="container"></div>
