--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 
 <!DOCTYPE html><html lang='en' class=''>
 <head>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react-dom.min.js'></script>
-  <script src='foo.js'></script>
+  <script type="text/babel" src='foo.js'></script>
 </head>
 <body>
   <div id="container"></div>
